added trash item

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div id="game-container">
-        <h1> Catch A Fish!</h1>
-        <button id="start-btn">Start Game</button>
+        <h1 id="start-title"> Catch A Fish!</h1>
+        <button id="start-btn"><span class="arrow"></span></button>
     </div>
     <div id="click-container"></div>
     <script type="text/javascript" src="js/script.js"></script>
