added fish movement and game stages (3 of 5)

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <div id="game-container">
         <h1 id="start-title">Gone Fishing!</h1>
+        <div id="instructions"></div>
         <button id="start-btn"><span class="arrow"></span></button>
         <div id="game-stats">
-            <!-- <span id="game-day">Day 1</span> -->
+            <span id="game-day">Day 1</span>
             <span id="game-timer">Timer: 10s</span>
             <span id="game-score">Score: 0</span>
         </div>
