--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <span id="game-timer">Timer: 10s</span>
             <span id="game-score">Score: 0</span>
         </div>
+        <div id="game-goal"></div>
     </div>
     <div id="click-container">
         <span id="line"></span>
