bug fixes and editing styling for timer and hit text

--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
 </head>
 <body>
     <div id="game-container">
-            <h1 id="start-title">Gone Fishing!</h1>
+        <h1 id="start-title">Gone Fishing!</h1>
         <div id="info-wrapper">
             <div id="instructions"></div>
             <button id="start-btn"><span class="arrow"></span></button>
         </div>
         <div id="game-stats">
             <span id="game-day">Day 1</span>
-            <span id="game-timer">Timer: 10s</span>
-            <span id="game-score">Score: 0</span>
+            <div id="clock">
+                <svg viewBox="0 0 120 120" class="chart-gauge" fill="none" stroke-width="4">
+                    <circle class="timer-backdrop" stroke-dasharray="360" r="50" cx="60" cy="60"></circle>
+                    <circle class="timer-gauge" stroke-dasharray="360" r="50" cx="60" cy="60"></circle>
+                    <text y="50%" x="50%" id="game-timer" class="timer-time">15s</text>
+                </svg>
+            </div>
+            <span id="game-score">Total Score: 0</span>
         </div>
-        <div id="game-goal"></div>
+        <p id="game-goal"></p>
     </div>
     <div id="click-container">
         <span id="line"></span>
