--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Gone Fishing!</title>
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Patrick+Hand&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div id="game-container">
