--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         </div>
         <div id="game-stats">
             <span id="game-day">Day 1</span>
+
             <div id="clock">
                 <svg viewBox="0 0 120 120" class="chart-gauge" fill="none" stroke-width="4">
-                    <circle class="timer-backdrop" stroke-dasharray="360" r="40" cx="60" cy="60"></circle>
-                    <circle class="timer-gauge" stroke-dasharray="360" r="40" cx="60" cy="60"></circle>
+                    <circle class="timer-backdrop" r="40" cx="60" cy="60"></circle>
+                    <circle class="timer-gauge" r="40" cx="60" cy="60"></circle>
                     <text y="50%" x="50%" id="game-timer" class="timer-time">15s</text>
                 </svg>
             </div>
